# Ansible-DAG-Harness

./: .claudeignore  .env.example  .envrc.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .yamllint.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PLAN.md  README.md  flake.nix  harness.yml  justfile  mkdocs.yml
harness/: agent-card.json  harness.yml  justfile  pyproject.toml
harness/harness/: __init__.py  cli.py  config.py  hitl.py  install.py  notifications.py  observability.py  tunnel_preflight.py
harness/harness/a2a/: __init__.py  agent_card.py  client.py  protocol.py  server.py  supervisor_integration.py
harness/harness/assets/: __init__.py  loader.py
harness/harness/bootstrap/: __init__.py  credentials.py  discovery.py  init.py  installer.py  paths.py  platform.py  prompts.py  selftest.py  upgrade.py  validation.py  wizard.py
harness/harness/costs/: __init__.py  alerts.py  pricing.py  routing.py  tracker.py
harness/harness/dag/: __init__.py  checkpointer.py  checkpointer_unified.py  error_resolution.py  graph.py  langgraph_builder.py  langgraph_engine.py  langgraph_nodes.py  langgraph_policies.py  langgraph_routing.py  langgraph_state.py  nodes.py  parallel.py  recovery_config.py  store.py  (+2 more)
harness/tests/: __init__.py  conftest.py  strategies.py  test_a2a.py  test_ansible_parser.py  test_bootstrap_init.py  test_checkpointer.py  test_checkpointer_unified.py  test_claude_sdk_integration.py  test_cli.py  test_config_validation.py  test_context.py  test_costs.py  test_error_resolution.py  test_failure_injection.py  test_gitlab_api.py  test_gitlab_extended.py  test_gitlab_integration.py  test_hitl_interrupt.py  test_hooks.py  test_hotl_agent.py  test_hotl_orchestrator.py  test_hotl_queue.py  test_idempotency.py  test_interrupt_resume.py  test_langgraph_modernization.py  test_mcp_tool_search.py  test_metrics.py  test_migrations.py  test_nodes.py  test_npm_integration.py  test_observability.py  test_parallel_tests.py  test_performance.py  test_recovery_subgraph.py  test_release.py  test_sandbox.py  test_skills.py  test_state_db.py  test_state_graph.py  (+7 more)
(+103 files in other folders)
